Ajuste style.css, _countdown-timer.scss, index.js

--- a/countdown/launch-countdown-timer-main-flipclock/scss/pages/_countdown-timer.scss
+++ b/countdown/launch-countdown-timer-main-flipclock/scss/pages/_countdown-timer.scss
@@ -48,7 +48,7 @@
                     z-index: 999;
                 }
 
-                &:nth-child(3), &:nth-child(6) {
+                &:nth-child(3), &:nth-child(6), &:nth-child(8) {
                     margin-right: 36px;
                 }
                 
