ajuste style.css

--- a/countdown/launch-countdown-timer-main-flipclock/scss/pages/_countdown-timer.scss
+++ b/countdown/launch-countdown-timer-main-flipclock/scss/pages/_countdown-timer.scss
@@ -25,6 +25,30 @@
             align-items: center;
             justify-content: center;
 
+            .flip-clock-divider {
+                width: 20px!important;
+
+                .flip-clock-label {
+                    top: unset;
+                    bottom: -66px;
+                    left: 50%;
+                    text-shadow: none;
+                    font-size: 14px;
+                    width: 148px;
+                    line-height: 12px;
+                    letter-spacing: 0.42em;
+                    text-transform: uppercase;
+                    color: #8385A9;
+                    display: block;
+                    text-align: center;
+                    transform: translateX(10%);
+                }
+
+                .flip-clock-dot {
+                    display: none;
+                }
+            }
+
             .flip {
                 position: relative;
                 margin: 0;
@@ -163,9 +187,6 @@
                 background: none!important;
             }
 
-            .flip-clock-divider {
-                display: none;
-            }
         }
           
     }
